--- a/Week5/oefening2_start.css
+++ b/Week5/oefening2_start.css
@@ -3,6 +3,10 @@ html {
     background-color: #ccdddd;
 }
 
+main {
+    margin: 0 auto;
+}
+
 main, header, nav, nav ul, article, aside {
     margin: 0;
     padding: 0;
@@ -95,4 +99,15 @@ nav li:nth-child(7) {
 
 nav li:nth-child(8) {
     border-color: grey;
+}
+
+img{
+    max-width: 100%;
+}
+
+@media only screen and (min-width: 1200px) {
+    main {
+        width: 1200px;
+        margin: 0 auto;
+    }
 }
