--- a/Week7/Style.css
+++ b/Week7/Style.css
@@ -1,13 +1,18 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     margin: 0;
     font-family: Roboto, sans-serif;
     background-color: #ededed;
 }
 
-div {
+div.pagina {
     background-color: #ededed;
     width: 1050px;
     margin: 0 auto;
+    z-index: 10;
 }
 
 nav {
@@ -15,6 +20,9 @@ nav {
     height: 55px;
     width: 1050px;
     position: fixed;
+    z-index: 5;
+    left: 50%;
+    margin-left: -525px;
 }
 
 .logo {
@@ -35,18 +43,15 @@ nav a {
     font-weight: 400;
 }
 
-main {
-    padding-top: 60px;
-}
-
 .banner {
     width: 100%;
+    margin-top: 60px;
 }
 
 .titel {
     position: absolute;
     top: 225px;
-    left: 975px;
+    left: 65%;
     color: white;
     font-weight: 100;
 }
@@ -63,29 +68,34 @@ hr {
 
 article {
     float: left;
-    width: 255px;
+    width: 25%;
     margin: 0;
+    color: #343740;
+}
+
+article:hover {
+    opacity: 0.7;
 }
 
 article.linkerkant {
-    padding-right: 5px;
+    padding: 0 5px 0 0;
 }
 
-article.midden {
+article.linksmidden, article.rechtsmidden {
     padding: 0 5px;
 }
 
 article.rechterkant {
-    padding-left: 5px;
+    padding: 0 0 0 5px;
 }
 
 article p {
     font-size: 10px;
-    width: auto;
 }
 
 article img {
     width: 100%;
+    height: 100px;
 }
 
 .naam {
@@ -94,6 +104,7 @@ article img {
 
 article section {
     height: 100px;
+    overflow: hidden;
 }
 
 h4 {
@@ -104,4 +115,137 @@ h4 {
 article section p {
     font-size: small;
     margin-top: 3px;
+}
+
+div.more {
+    background-color: #343740;
+    width: 150px;
+    padding: 5px 5px;
+    color: white;
+    margin: 0 auto;
+    clear: both;
+    position: relative;
+    top: 5px;
+}
+
+div.more:hover {
+    opacity: 0.7;
+}
+
+a.more {
+    text-decoration: none;
+}
+
+a.actieknop {
+    text-decoration: none;
+    color: white;
+}
+
+div.actieknop {
+    background-color: #093156;
+    padding: 4px;
+    font-size: small;
+}
+
+article.acties:hover {
+    opacity: 1;
+}
+
+article.acties {
+    margin-top: 10px;
+    height: 150px;
+}
+
+div.actieknop:hover {
+    opacity: 0.7;
+}
+
+footer {
+    background-color: black;
+    color: white;
+    height: 100px;
+    clear: both;
+    text-align: center;
+    font-size: small;
+    margin-top: 50px;
+    position: relative;
+    top: 50px;
+}
+
+footer p {
+    position: relative;
+    top: 35px;
+}
+
+@media only screen and (max-width: 1000px) and (min-width: 700px) {
+    div.pagina {
+        width: 700px;
+    }
+
+    nav {
+        width: 700px;
+        left: 50%;
+        margin-left: -350px;
+    }
+
+    .titel {
+        top: 150px;
+        font-size: 24px;
+    }
+
+    article {
+        width: 50%;
+    }
+
+    article.linksmidden {
+        padding: 0 0 0 5px;
+    }
+
+    article.rechtsmidden {
+        padding: 0 5px 0 0;
+    }
+
+    article img {
+       height: 125px;
+    }
+
+}
+
+@media only screen and (max-width: 700px) {
+    nav {
+        width: 100%;
+        left: 0;
+        margin-left: 0;
+    }
+
+    div.pagina {
+        width: 95%;
+    }
+
+    .titel {
+        display: none;
+    }
+
+    article.rechterkant, article.linkerkant, article.linksmidden, article.rechtsmidden {
+        width: 100%;
+        padding: 0;
+    }
+
+    article img {
+        height: auto;
+    }
+
+    article.acties {
+        float: none;
+        clear: both;
+        margin-top: 23%;
+    }
+
+    article.acties.linkerkant {
+        margin-top: 20px;
+    }
+
+    footer {
+        top: 100px;
+    }
 }
