--- a/Week7/Style.css
+++ b/Week7/Style.css
@@ -59,6 +59,7 @@ nav a {
 h2 {
     font-weight: normal;
     margin-bottom: 0;
+    display: inline-block;
 }
 
 hr {
@@ -177,6 +178,97 @@ footer p {
     top: 35px;
 }
 
+.icoon1 {
+    height: 14.28px;
+    display: inline-block;
+}
+
+.icoon2 {
+    height: 25px;
+    display: inline-block;
+    position: relative;
+    top: 5px;
+}
+
+.submit {
+    width: 100%;
+    color: white;
+    background-color: #326544;
+    border-radius: 5px;
+    border: 0;
+    padding: 5px;
+}
+
+.boodschap {
+    width: 100%;
+    color: white;
+    background-color: #85d38e;
+    border-radius: 5px;
+    border: 0;
+    padding: 5px;
+    margin-top: 10px;
+    margin-bottom: 2px;
+}
+
+.tekstnaam {
+    width: 31.8%;
+    margin-right: 1%;
+    color: white;
+    background-color: #85d38e;
+    border-radius: 5px;
+    border: 0;
+    padding: 5px;
+}
+
+.tekstemail {
+    width: 31.6%;
+    margin-right: 1%;
+    margin-left: 1%;
+    color: white;
+    background-color: #85d38e;
+    border-radius: 5px;
+    border: 0;
+    padding: 5px;
+}
+
+.tekstonderwerp {
+    width: 31.8%;
+    margin-left: 1%;
+    color: white;
+    background-color: #85d38e;
+    border-radius: 5px;
+    border: 0;
+    padding: 5px;
+}
+
+table {
+    width: 100%;
+    table-layout: fixed;
+    text-align: center;
+    color: white;
+    font-size: small;
+}
+
+.vet {
+    font-weight: bold;
+}
+
+.donkerder {
+    background-color: #326544;
+}
+
+.donker {
+    background-color: #368050;
+}
+
+.licht {
+    background-color: #85d38e;
+}
+
+.lichter {
+    background-color: #b5d8b9;
+}
+
 @media only screen and (max-width: 1000px) and (min-width: 700px) {
     div.pagina {
         width: 700px;
@@ -207,6 +299,18 @@ footer p {
 
     article img {
        height: 125px;
+    }
+
+    .tekstnaam {
+        width: 31.6%;
+    }
+
+    .tekstemail {
+        width: 31.6%;
+    }
+
+    .tekstonderwerp {
+        width: 31.6%;
     }
 
 }
@@ -247,5 +351,17 @@ footer p {
 
     footer {
         top: 100px;
+    }
+
+    .tekstnaam {
+        width: 31.2%;
+    }
+
+    .tekstemail {
+        width: 31.3%;
+    }
+
+    .tekstonderwerp {
+        width: 31.2%;
     }
 }
